--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^7.0.8",
         "commerceguys/addressing": "^0.8",
         "commerceguys/intl": "^0.7",
+        "doctrine/orm": "^2.6",
         "symfony/framework-bundle": "^4.0"
     },
     "require-dev": {
@@ -27,7 +28,7 @@
         "sort-packages": true
     },
     "autoload": {
-        "psr-4": { "Symfony\\Bundle\\MakerBundle\\": "src/" }
+        "psr-4": { "Daften\\Addressing\\": "src/" }
     },
     "extra": {
         "branch-alias": {
