--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "commerceguys/addressing": "^0.8",
         "commerceguys/intl": "^0.7",
         "doctrine/orm": "^2.6",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0"
     },
     "require-dev": {
