--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,7 +4,7 @@ plugins:
   phpcodesniffer:
     enabled: true
     config:
-      standard: "PSR1,PSR2,Symfony2"
+      standard: "PSR1,PSR2"
   phpmd:
     enabled: true
   duplication:
