--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.8",
+        "php": ">=7.2.8",
         "commerceguys/addressing": "^1",
         "doctrine/orm": "^2.6",
         "symfony/form": "^4.4 | ^5.3",
