--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.8 | ^8.0",
+        "php": "^7.4 | ^8.0",
         "commerceguys/addressing": "^2",
         "doctrine/orm": "^2.6",
         "symfony/form": "^4.4 | ^5.3 | ^6.0",
@@ -37,7 +37,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "1.1-dev"
+            "dev-develop": "1.1.1-dev"
         }
     }
 }
