--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.4 | ^8.0",
-        "commerceguys/addressing": "^2",
+        "commerceguys/addressing": "^1 | ^2",
         "doctrine/orm": "^2.6",
         "symfony/form": "^4.4 | ^5.3 | ^6.0",
         "symfony/framework-bundle": "^4.4 | ^5.3 | ^6.0"
